# sludge

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md
examples/bullets/: main.rs
examples/bullets-miniquad/: main.rs
examples/danmaku/: danmaku.rs  main.lua  main.rs
examples/templates/: main.lua  main.rs
examples/templates-ggez/: main.rs
examples/text/: main.rs
examples/wrapping_text/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
sludge-2d/: Cargo.toml
sludge-2d/examples/text/: main.rs
sludge-2d/examples/wrapping_text/: main.rs
sludge-2d/src/: graphics.rs  lib.rs  math.rs  spatial_hash.rs
sludge-2d/src/graphics/: drawable_graph.rs  particle_system.rs  text.rs
sludge-danmaku/: Cargo.toml  README.md
sludge-danmaku/examples/danmaku/: main.lua  main.rs
sludge-danmaku/src/: builder.rs  bullet.rs  components.rs  lib.rs  pattern.rs
sludge-fmod/: Cargo.toml  README.md
sludge-fmod-sys/: Cargo.toml  README.md  build.rs  wrapper.h
sludge-fmod/src/: bank.rs  event.rs  fmod.rs  lib.rs
src/: api.rs  assets.rs  chunked_grid.rs  collide.rs  components.rs  conf.rs  danmaku.rs  dependency_graph.rs  dispatcher.rs  ecs.rs  event.rs  filesystem.rs  ggez.rs  graphics.rs  hierarchy.rs  input.rs  layer_manager.rs  lib.rs  loader.rs  math.rs  module.rs  modules.rs  path_clean.rs  persist.rs  resource_cache.rs  resources.rs  scene.rs  scene_graph.rs  spatial_2d.rs  sprite.rs  systems.rs  tiled.rs  timer.rs  transform.rs  utils.rs  vfs.rs
src/api/: components.rs  log.rs  math.rs  thread.rs  world.rs
src/api/lua/: component_value_thunk.lua  lookup_thunk.lua  persist_metamethod_thunk.lua  playback_thunk.lua  prelude.lua  serializer_thunk.lua
src/collide/: spatial_hash.rs
src/ecs/: components.rs  hierarchy.rs  systems.rs  transform.rs  transform_graph.rs
src/graphics/: basic_es300.glslv  drawable_graph.rs  sorted_layer.rs  text.rs
src/module/: ecs.rs  log.rs  math.rs
src/module/ecs/: components.rs
src/module/ecs/components/: parent.rs  transform.rs
src/modules/: ecs.rs
src/spatial_2d/: spatial_hash.rs  tile_grid.rs
src/tiled/: xml_parser.rs
tests/persist/: main.rs
