[package]
name = "sludge"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

[features]
default = ["ggez"]

[dependencies]
rlua = { path = "../rlua" }
nalgebra = { version = "0.22.0", features = ["mint", "serde-serialize"] }
ncollide2d = "0.24.0"
hecs = { path = "../hecs", features = ["macros"] }
generational-arena = { path = "../generational-arena" }
derivative = "2.1.1"
anyhow = "1.0.32"
crossbeam-channel = "0.4.4"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.11"
chrono = "0.4.15"
hibitset = "0.6.3"
hashbrown = { version = "0.9.0", features = ["serde"] }
shrev = { path = "../shrev-rs" }
atomic_refcell = "0.1.6"
string_cache = "0.8.0"
ggez = { version = "0.5.1", optional = true }
tiled = { path = "../rs-tiled" }
petgraph = "0.5.1"
sludge-macros = { path = "macros", version = "0.1.0", optional = true }
serde = "1.0.116"
serde_json = "1.0.57"
warmy = { path = "../warmy", features = ["arc"] }
aseprite = { path = "../aseprite" }
inventory = "0.1.9"
rlua_serde = { path = "../rlua_serde" }
zip = "0.5.8"
directories = "3.0.1"

[dev-dependencies]
approx = "0.3.2"
ggez = { version = "0.5.1" }
rand = "0.7.3"

[[example]]
name = "bullets"
