[package]
name = "sludge"
version = "0.1.0"
license = "MIT"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

[features]
default = ["ggez-fuckery"]
ggez-fuckery = ["ggez", "gilrs", "winit"]

[dependencies]
rlua = { git = "https://github.com/sdleffler/rlua" }
nalgebra = { version = "0.22.0", features = ["mint", "serde-serialize"] }
ncollide2d = "0.24.0"
hecs = { git = "https://github.com/sdleffler/hecs", features = ["macros"] }
derivative = "2.1.1"
anyhow = "1.0.32"
crossbeam-channel = "0.4.4"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.11"
chrono = "0.4.15"
hibitset = "0.6.3"
hashbrown = { version = "0.9.0", features = ["serde"] }
atomic_refcell = "0.1.6"
string_cache = "0.8.0"
ggez = { git = "https://github.com/sdleffler/ggez", optional = true }
petgraph = "0.5.1"
serde = "1.0.116"
serde_json = "1.0.57"
warmy = { git = "https://github.com/sdleffler/warmy", features = ["arc"] }
inventory = "0.1.9"
rlua_serde = { git = "https://github.com/sdleffler/rlua_serde" }
zip = "0.5.8"
directories = "3.0.1"
xml-rs = "0.8"
base64 = "0.13.0"
libflate = "0.1.18"
zstd = "0.5"
thiserror = "1.0.20"
fragile = "1.0.0"
gilrs = { version = "0.7", optional = true }
winit = { version = "0.19.3", optional = true }
image = { version = "0.22", default-features = false, features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm",
"tga", "tiff", "webp", "bmp", "dxt", ] }
thunderdome = { git = "https://github.com/sdleffler/thunderdome", branch = "main" }
aseprite = "0.1.3"
shrev = "1.1.1"
smallvec = "1.4.2"
ron = "0.6.2"

[dev-dependencies]
approx = "0.3.2"
ggez = { git = "https://github.com/sdleffler/ggez" }
rand = "0.7.3"

[[example]]
name = "bullets"
