[package]
name = "sludge-macros"
version = "0.1.0"
description = "Procedural macros for sludge"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", default-features = false, features = ["proc-macro", "parsing", "printing", "derive"] }
quote = "1.0.3"
proc-macro2 = "1.0.1"
