[package]
name = "sludge-danmaku"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sludge = { path = ".." }
hibitset = "0.6.3"
rand_xorshift = "0.2.0"
anyhow = "1.0.33"
atomic_refcell = "0.1.6"
hashbrown = "0.9.1"
rand = "0.7.3"
hecs = { git = "https://github.com/sdleffler/hecs", features = ["macros"] }
serde = "1.0.117"
im = "15.0.0"
easer = "0.2.1"
smallbox = { version = "0.8", features = ["coerce"] }
log = "0.4.11"
stack_dst = { version = "0.6.0", features = ["unsize"] }
nalgebra = { version = "0.22.0", features = ["mint", "serde-serialize"] }
ncollide2d = "0.24.0"
sludge-2d = { git = "https://github.com/sdleffler/sludge", branch = "main" }
thunderdome = "0.4.0"
rand_xoshiro = "0.4.0"
dynamic-pool = "0.2.2"
rlua_serde = { git = "https://github.com/sdleffler/rlua_serde" }
serde-hashkey = { git = "https://github.com/sdleffler/serde-hashkey", branch = "main", features = ["ordered-float"] }
serde-transcode = "1.1.0"

[dev-dependencies]
shrev = "1.1.1"
fern = "0.6.0"
log = "0.4.11"
chrono = "0.4.19"

[[example]]
name = "danmaku"
