[package]
name = "sludge-fmod"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["sludge-fmod-sys/debug"]

[dependencies]
sludge = { path = ".." }
sludge-fmod-sys = { path = "../sludge-fmod-sys" }
bitflags = "1.2.1"
libc = "0.2.80"
log = "0.4.11"
